# ifit_school

./: .gitignore  pyproject.toml
bot/: __init__.py  config.py  engine.py  main.py
bot/common/: __init__.py  dependencies.py  enums.py  localException.py  locale.py  states.py
bot/handlers/: admin.py  common.py  courses.py  utils.py
bot/models/: __init__.py  coursesApplicationsInfoRg.py  coursesList.py  coursesParticipantsInfoRg.py  coursesScheduleInfoRg.py  employeesList.py  paymentsInfoRg.py  productsFAQInfoRg.py  productsList.py  settlementsInfoRg.py  usersList.py  usersMessengersInfoRg.py  utils.py
bot/serviceObjects/: __init__.py  common.py  crmConnector.py  utils.py
bot/serviceObjects/aiogram_calendar/: __init__.py  simple_calendar.py
bot/serviceObjects/courses/: __init__.py  manager.py
bot/serviceObjects/employees/: __init__.py  manager.py
bot/serviceObjects/products/: __init__.py  manager.py
bot/serviceObjects/users/: __init__.py  manager.py
bot/serviceObjects/usersMessengers/: __init__.py  manager.py
services/: db_create.py  db_create_fill.py  db_fill.py
